<resources>
    <string name="app_name">Healven</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash_content_description">Splash image</string>
    <string name="title_activity_login">Sign in</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //navigation
    <string name="home">Home</string>
    <string name="dining">Dining</string>
    <string name="account">Account</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="emailerr">Email is required</string>
    <string name="passworderr">Password is required</string>

    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="required">Required Area</string>
    <string name="alreadyBase">You are already in the base.</string>
</resources>
